Package: psCBS
==============

Version: 0.7.4 [2010-09-18]
o BUG FIX: plot() for PairedPSCBS used a non-defined variable.


Version: 0.7.3 [2010-09-16]
o Added callABandHighAI() for calling paired PSCBS segmentation results.
o Added internal bootstrapping functions.


Version: 0.7.2 [2010-09-15]
o Added more methods for the PSCBS class.


Version: 0.7.1 [2010-09-08]
o Added more methods for the PSCBS class.
o Now segmentByPairedPSCBS() also returns the TumorBoost normalized data.


Version: 0.7.0 [2010-09-04]
o Updated segmentByPairedPSCBS() to provide two-step segmentation 
  from first segmenting the total copy numbers and then the
  decrease-of-heterozygosity signals.  Added utility functions for
  plotting the results.  The code for calling allelic imbalance
  and LOH is still to be added.


Version: 0.6.3 [2010-09-02]
o ROBUSTNESS: Now segmentByCBS() also works if there are no data points.


Version: 0.6.2 [2010-07-14]
o CLEAN UP: Added callNaiveHeterzygotes() which is a cleaned up
  version of findheterozygous().  Added an Rd example that asserts
  that the two are identical and compares the calls to those of
  aroma.light::callNaiveGenotypes().


Version: 0.6.1 [2010-07-09]
o Added low-level segmentByPairedPSCBS(), which runs paired PSCBS
  segmentation on a single sample and a single chromosome.
  It only segments; it does not call segments.  This is only
  a stub in the sense that it still does not adjust p-values etc.
o Added low-level segmentByCBS(), which runs CBS segmentation
  on a single sample and a single chromosome.
o BACKWARD COMPATIBILITY: Now psCNA() returns a list of length 8.
o Reverted psSegment() back to v0.5.6.


Version: 0.6.0 [2010-07-08]
o Now psSegmentPaired() returns a data frame (no longer a matrix).
o CLEANUP: Major cleanup, i.e. renaming variables, reordering etc.
o CLEANUP: Created psSegmentPaired() from psSegment().
o ROBUSTNESS: Replaced all 1:n with seq(length=n) to deal with n == 0.